fix: fix page break on cv print

--- a/themes/alice/assets/scss/print/base/_global.scss
+++ b/themes/alice/assets/scss/print/base/_global.scss
@@ -17,6 +17,6 @@ body {
   font-family: serif;
 }
 
-.page-break-before {
-  break-before: always;
+.break-before {
+  break-before: page;
 }
